tests/bad/frontendErrors/conditionTypeErrorWhile.latte
int main() {
    int x = 1;
    while (x) {}
    return 0;
}
